--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,46 @@
     <link rel="stylesheet" href="./Assets/CSS/stylesheet.css" />
     <script src="./Assets/JS Mappe/app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <ul class="navConteiner">
+          <li>Forside</li>
+          <li>Portfolio</li>
+          <li>Om Mig</li>
+          <li>Kontakt</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="introSektion">
+        <div class="infoSektion">
+          <h1>
+            Hej jeg hedder <br />
+            Samanta
+          </h1>
+          <p>
+            Jeg elsker at skabe brugervenligt og gennemført digitalt design. Med
+            øje for detaljer og fokus på både funktion og æstetik, hjælper jeg
+            med at omsætte idéer til løsninger, der fungerer i praksis. Kig
+            gerne på mit portfolio – jeg deler gerne erfaringer og idéer!
+          </p>
+        </div>
+        <div class="Introikoner">
+          <div id="lokation">
+            <img
+              src="./Assets/Photos/Ikoner/lokation.png"
+              alt="lokation ikon"
+            />
+            <p>Aalborg</p>
+          </div>
+          <div id="linkedIn">
+            <img src="./Assets/Photos/Ikoner/IN.png" alt="Linked in logo" />
+            <p>Linked In</p>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer></footer>
+  </body>
 </html>
