--- a/Index.html
+++ b/Index.html
@@ -45,6 +45,7 @@
             <p>Linked In</p>
           </div>
         </div>
+        <div></div>
       </div>
     </main>
     <footer></footer>
