--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,11 @@
             <p>Linked In</p>
           </div>
         </div>
-        <div></div>
+        <div class="BilledeCard">
+          <img src="./Assets/Photos/IMG_0068.JPG" alt="" />
+          <p>Samanta Petrova</p>
+          <p>Ux/Ui og grafisk designer</p>
+        </div>
       </div>
     </main>
     <footer></footer>
