--- a/Index.html
+++ b/Index.html
@@ -51,6 +51,15 @@
           <p>Ux/Ui og grafisk designer</p>
         </div>
       </div>
+      <section class="kompetanceSektion">
+        <h2>Kompetancer</h2>
+        <div class="KSlogoer">
+          <img src="" alt="" /><img src="" alt="" /><img src="" alt="" /><img
+            src=""
+            alt=""
+          /><img src="" alt="" /><img src="" alt="" />
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
