--- a/Index.html
+++ b/Index.html
@@ -11,10 +11,10 @@
     <header>
       <nav>
         <ul class="navConteiner">
-          <li>Forside</li>
-          <li>Portfolio</li>
-          <li>Om Mig</li>
-          <li>Kontakt</li>
+          <li><a href="Index.html">Forside</a></li>
+          <li><a href="./Portfolio.html">Portfolio</a></li>
+          <li><a href="./OmMig.html"> Om OmMig</a></li>
+          <li><a href="./kontakt.html"> Kontakt </a></li>
         </ul>
       </nav>
     </header>
@@ -32,6 +32,12 @@
             gerne på mit portfolio – jeg deler gerne erfaringer og idéer!
           </p>
         </div>
+
+        <div class="ProfileCard">
+          <img src="./Assets/Photos/IMG_0068.JPG" alt="" class="CardBillede" />
+          <h2>Samanta Petrova</h2>
+          <p>Ux/Ui og grafisk designer</p>
+        </div>
         <div class="Introikoner">
           <div id="lokation">
             <img
@@ -45,20 +51,25 @@
             <p>Linked In</p>
           </div>
         </div>
-        <div class="BilledeCard">
-          <img src="./Assets/Photos/IMG_0068.JPG" alt="" />
-          <p>Samanta Petrova</p>
-          <p>Ux/Ui og grafisk designer</p>
-        </div>
       </div>
       <section class="kompetanceSektion">
         <h2>Kompetancer</h2>
         <div class="KSlogoer">
-          <img src="" alt="" /><img src="" alt="" /><img src="" alt="" /><img
-            src=""
-            alt=""
-          /><img src="" alt="" /><img src="" alt="" />
+          <div class="mmdIkoner">
+            <img src="./Assets/Photos/Ikoner/Html.png" alt="" />
+            <img src="./Assets/Photos/Ikoner/CSS.png" alt="" />
+            <img src="./Assets/Photos/Ikoner/JS.png" alt="" />
+          </div>
+          <div class="gdtIkoner">
+            <img src="./Assets/Photos/Ikoner/PS.png" alt="" />
+            <img src="./Assets/Photos/Ikoner/AI.png" alt="" />
+            <img src="./Assets/Photos/Ikoner/Id.png" alt="" />
+          </div>
         </div>
+      </section>
+      <section>
+        <h2>Nyeste cases</h2>
+        <div class="portfolioSektion"></div>
       </section>
     </main>
     <footer></footer>
