--- a/Index.html
+++ b/Index.html
@@ -31,6 +31,15 @@
             med at omsætte idéer til løsninger, der fungerer i praksis. Kig
             gerne på mit portfolio – jeg deler gerne erfaringer og idéer!
           </p>
+          <p>
+            Jeg er en kreativ og viljestærk designer med en stor passion for
+            farver og visuel formgivning. Kreativitet er min drivkraft, og jeg
+            henter ofte inspiration fra forskellige årtier, hvor jeg lader
+            historiske æstetikker mødes med moderne design. Min tilgang er både
+            legende og målrettet – jeg brænder for at skabe visuelt design, der
+            vækker følelser, fortæller historier og giver hvert projekt et unikt
+            udtryk med en stærk æstetisk identitet.
+          </p>
         </div>
 
         <div class="ProfileCard">
@@ -69,7 +78,49 @@
       </section>
       <section>
         <h2>Nyeste cases</h2>
-        <div class="portfolioSektion"></div>
+
+        <div class="portfolioSektion">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="./Assets/Photos/IMG_0068.JPG" alt="Case billede" />
+                <h2>
+                  Rold Skov <br />
+                  Orienteringsklub
+                </h2>
+              </div>
+              <div class="flip-card-bagside">
+                <p>
+                  I Rold Skov ligger lokalerne til Rold Skov Orienteringsklub
+                  (herefter RSOK), som er en aktiv orienteringsløbeklub. Klubben
+                  har en stærk tilknytning til den naturskønne skov og tilbyder
+                  aktiviteter, der kombinerer motion, mental udfordring og
+                  socialt fællesskab.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="./Assets/Photos/IMG_0068.JPG" alt="Case billede" />
+                <h2>
+                  Rold Skov <br />
+                  Orienteringsklub
+                </h2>
+              </div>
+              <div class="flip-card-bagside">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Placeat obcaecati perspiciatis possimus. Expedita cum sint
+                  reiciendis, saepe quisquam maiores corporis ipsum maxime
+                  debitis nam, accusantium quibusdam, voluptatum voluptate
+                  possimus perspiciatis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
