--- a/OmMig.html
+++ b/OmMig.html
@@ -10,13 +10,29 @@
   <body>
     <header>
       <nav>
-        <ul class="navConteiner">
+        <ul class="navConteinerUBG">
           <li><a href="Index.html">Forside</a></li>
           <li><a href="./Portfolio.html">Portfolio</a></li>
           <li><a href="./OmMig.html"> Om OmMig</a></li>
           <li><a href="./kontakt.html"> Kontakt </a></li>
         </ul>
       </nav>
+      <main>
+        <section class="OmMigintro">
+          <div class="lilleBoks">
+            <h1>Om mig</h1>
+            <p>
+              Jeg er en kreativ og viljestærk designer med en stor passion for
+              farver og visuel formgivning. Kreativitet er min drivkraft, og jeg
+              henter ofte inspiration fra forskellige årtier, hvor jeg lader
+              historiske æstetikker mødes med moderne design. Min tilgang er
+              både legende og målrettet – jeg brænder for at skabe visuelt
+              design, der vækker følelser, fortæller historier og giver hvert
+              projekt et unikt udtryk med en stærk æstetisk identitet.
+            </p>
+          </div>
+        </section>
+      </main>
     </header>
   </body>
 </html>
