--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="./Assets/CSS/stylesheet.css" />
     <script src="./Assets/JS Mappe/app.js" defer></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -19,50 +26,56 @@
       </nav>
     </header>
     <main>
-      <div class="introSektion">
-        <div class="infoSektion">
-          <h1>
-            Hej jeg hedder <br />
-            Samanta
-          </h1>
-          <p>
-            Jeg elsker at skabe brugervenligt og gennemført digitalt design. Med
-            øje for detaljer og fokus på både funktion og æstetik, hjælper jeg
-            med at omsætte idéer til løsninger, der fungerer i praksis. Kig
-            gerne på mit portfolio – jeg deler gerne erfaringer og idéer!
-          </p>
-          <p>
-            Jeg er en kreativ og viljestærk designer med en stor passion for
-            farver og visuel formgivning. Kreativitet er min drivkraft, og jeg
-            henter ofte inspiration fra forskellige årtier, hvor jeg lader
-            historiske æstetikker mødes med moderne design. Min tilgang er både
-            legende og målrettet – jeg brænder for at skabe visuelt design, der
-            vækker følelser, fortæller historier og giver hvert projekt et unikt
-            udtryk med en stærk æstetisk identitet.
-          </p>
-        </div>
+      <section class="IfoForside">
+        <div class="introSektion backgroundColorBeige">
+          <div class="infoSektion">
+            <h1 class="Overskrift">
+              Hej jeg hedder <br />
+              Samanta
+            </h1>
+            <p>
+              Jeg elsker at skabe brugervenligt og gennemført digitalt design.
+              Med øje for detaljer og fokus på både funktion og æstetik, hjælper
+              jeg med at omsætte idéer til løsninger, der fungerer i praksis.
+              Kig gerne på mit portfolio – jeg deler gerne erfaringer og idéer!
+            </p>
+            <p>
+              Jeg er en kreativ og viljestærk designer med en stor passion for
+              farver og visuel formgivning. Kreativitet er min drivkraft, og jeg
+              henter ofte inspiration fra forskellige årtier, hvor jeg lader
+              historiske æstetikker mødes med moderne design. Min tilgang er
+              både legende og målrettet – jeg brænder for at skabe visuelt
+              design, der vækker følelser, fortæller historier og giver hvert
+              projekt et unikt udtryk med en stærk æstetisk identitet.
+            </p>
+          </div>
 
-        <div class="ProfileCard">
-          <img src="./Assets/Photos/IMG_0068.JPG" alt="" class="CardBillede" />
-          <h2>Samanta Petrova</h2>
-          <p>Ux/Ui og grafisk designer</p>
-        </div>
-        <div class="Introikoner">
-          <div id="lokation">
+          <div class="ProfileCard">
             <img
-              src="./Assets/Photos/Ikoner/lokation.png"
-              alt="lokation ikon"
+              src="./Assets/Photos/IMG_0068.JPG"
+              alt=""
+              class="CardBillede"
             />
-            <p>Aalborg</p>
+            <h2>Samanta Petrova</h2>
+            <p>Ux/Ui og grafisk designer</p>
           </div>
-          <div id="linkedIn">
-            <img src="./Assets/Photos/Ikoner/IN.png" alt="Linked in logo" />
-            <p>Linked In</p>
+          <div class="Introikoner">
+            <div id="lokation">
+              <img
+                src="./Assets/Photos/Ikoner/lokation.png"
+                alt="lokation ikon"
+              />
+              <p>Aalborg</p>
+            </div>
+            <div id="linkedIn">
+              <img src="./Assets/Photos/Ikoner/IN.png" alt="Linked in logo" />
+              <p>Linked In</p>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
       <section class="kompetanceSektion">
-        <h2>Kompetancer</h2>
+        <h2 class="Overskrift">Kompetancer</h2>
         <div class="KSlogoer">
           <div class="mmdIkoner">
             <img src="./Assets/Photos/Ikoner/Html.png" alt="" />
@@ -76,10 +89,9 @@
           </div>
         </div>
       </section>
-      <section>
-        <h2>Nyeste cases</h2>
-
-        <div class="portfolioSektion">
+      <section class="portfolioSektion">
+        <h2 class="Overskrift">Nyeste cases</h2>
+        <div class="cardsSektion">
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front">
@@ -88,6 +100,9 @@
                   Rold Skov <br />
                   Orienteringsklub
                 </h2>
+                <p class="Lillecaption">
+                  Kør musen over mig <i class="fa-solid fa-chevron-right"></i>
+                </p>
               </div>
               <div class="flip-card-bagside">
                 <p>
@@ -108,6 +123,9 @@
                   Rold Skov <br />
                   Orienteringsklub
                 </h2>
+                <p class="Lillecaption">
+                  Kør musen over mig <i class="fa-solid fa-chevron-right"></i>
+                </p>
               </div>
               <div class="flip-card-bagside">
                 <p>
@@ -119,6 +137,16 @@
                 </p>
               </div>
             </div>
+          </div>
+          <div class="SeeMere">
+            <p>See mere her <i class="fa-solid fa-chevron-right"></i></p>
+            <a href="./Portfolio.html">
+              <img
+                class="pointer"
+                src="./Assets/Photos/Stars/TheStarVenstre.png"
+                alt=""
+              />
+            </a>
           </div>
         </div>
       </section>
