--- a/OmMig.html
+++ b/OmMig.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./Assets/CSS/stylesheet.css" />
     <script src="./Assets/JS Mappe/app.js" defer></script>
+    https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css
     <title>Document</title>
   </head>
   <body>
@@ -19,17 +20,94 @@
       </nav>
       <main>
         <section class="OmMigintro">
-          <div class="lilleBoks">
-            <h1>Om mig</h1>
+          <div class="introSektion">
+            <div class="lilleBoks infoSektion">
+              <h1 class="Overskrift">Om mig</h1>
+              <p>
+                Jeg er en kreativ og viljestærk designer med en stor passion for
+                farver og visuel formgivning. Kreativitet er min drivkraft, og
+                jeg henter ofte inspiration fra forskellige årtier, hvor jeg
+                lader historiske æstetikker mødes med moderne design. Min
+                tilgang er både legende og målrettet – jeg brænder for at skabe
+                visuelt design, der vækker følelser, fortæller historier og
+                giver hvert projekt et unikt udtryk med en stærk æstetisk
+                identitet.
+              </p>
+            </div>
+            <div class="ProfileCard">
+              <img
+                src="./Assets/Photos/IMG_0068.JPG"
+                alt=""
+                class="CardBillede"
+              />
+              <h2>Samanta Petrova</h2>
+              <p>Ux/Ui og grafisk designer</p>
+            </div>
+          </div>
+        </section>
+        <section class="FremtidsSection backgroundColorBeige">
+          <div class="planerFremtid">
+            <img
+              class="OMStjerne"
+              src="./Assets/Photos/Stars/ThestaropenArms.png"
+              alt=""
+            />
             <p>
-              Jeg er en kreativ og viljestærk designer med en stor passion for
-              farver og visuel formgivning. Kreativitet er min drivkraft, og jeg
-              henter ofte inspiration fra forskellige årtier, hvor jeg lader
-              historiske æstetikker mødes med moderne design. Min tilgang er
-              både legende og målrettet – jeg brænder for at skabe visuelt
-              design, der vækker følelser, fortæller historier og giver hvert
-              projekt et unikt udtryk med en stærk æstetisk identitet.
+              Jeg har store planer for min fremtid, hvor jeg drømmer om at
+              udforske arbejdsmarkedet inden for grafisk design og
+              multimediedesign. På sigt vil jeg gerne prøve kræfter med livet
+              som freelance-designer og arbejde fra min egen kreative vinkel.
+              <br />
+              Jeg har mange interesser og elsker at prøve nye ting. Nogle af
+              mine yndlingshobbyer er at tegne, lave illustrationer og tage
+              poloroid billeder.
             </p>
+          </div>
+        </section>
+        <section class="MusikSection">
+          <div class="MusikMedBilleder">
+            <div class="MusikTekst">
+              <p>
+                Musik spiller en central rolle i mit liv, den hjælper mig både
+                med at koncentrere mig og med at koble af efter en lang dag. Jeg
+                elsker også at tage til koncerter med venner, fordi jeg nyder
+                den særlige stemning og energi, man kun oplever live.
+              </p>
+            </div>
+            <div class="card-stack">
+              <div class="photo-card">
+                <img
+                  src="./Assets/Photos/musikBilleder/1d44da1ccfc5d9fe0ae5ce0a7385c9b9.JPEG"
+                  alt="x"
+                />
+                <h2 class="caption">Post Malone</h2>
+                <p class="Lillecaption">Tryk på mig</p>
+              </div>
+
+              <div class="photo-card">
+                <img
+                  src="./Assets/Photos/musikBilleder/7f735eaab8ee9d695f5674f57d5a681c.JPEG"
+                  alt="x"
+                />
+                <h2 class="caption">Post Malone</h2>
+                <p class="Lillecaption">Tryk på mig</p>
+              </div>
+
+              <div class="photo-card">
+                <img
+                  src="./Assets/Photos/musikBilleder/c89531094b2d7c9bcd69d8016e3d5a12.JPEG"
+                  alt="x"
+                />
+                <h2 class="caption">Post Malone</h2>
+                <p class="Lillecaption">Tryk på mig</p>
+              </div>
+
+              <div class="photo-card">
+                <img src="x" alt="x" />
+                <h2 class="caption">Post Malone</h2>
+                <p class="Lillecaption">Tryk på mig</p>
+              </div>
+            </div>
           </div>
         </section>
       </main>
