Tabs på portfolio side og cards der til

--- a/Chat.html
+++ b/Chat.html
@@ -8,7 +8,7 @@
     <script src="./Assets/JS Mappe/app.js"></script>
   </head>
   <body>
-    <div class="card-stack">
+    <!-- <div class="card-stack">
       <div class="photo-card">
         <img src="x" alt="x" />
         <p class="caption">x</p>
@@ -27,6 +27,76 @@
       <div class="photo-card">
         <img src="x" alt="x" />
         <p class="caption">x</p>
+      </div>
+    </div> -->
+
+    <!-- Tabs -->
+    <div class="tab-container">
+      <button class="tab-button active" onclick="openTab(event, 'webdesign')">
+        Web design
+      </button>
+      <button class="tab-button" onclick="openTab(event, 'grafisk')">
+        Grafisk Design
+      </button>
+    </div>
+
+    <!-- Webdesign content -->
+    <div id="webdesign" class="tab-content active">
+      <div class="card-grid">
+        <div class="card">
+          <img src="img1.jpg" alt="Projekt 1" />
+          <p>Individuel opgave</p>
+        </div>
+        <div class="card">
+          <img src="img1.jpg" alt="Projekt 2" />
+          <p>Rold Skov Orienteringsklub</p>
+        </div>
+        <div class="card">
+          <img src="img2.jpg" alt="Projekt 3" />
+          <p>Magisk Jul Skulpturpark Blokhus</p>
+        </div>
+        <div class="card">
+          <img src="img1.jpg" alt="Projekt 4" />
+          <p>Make better food</p>
+        </div>
+        <div class="card">
+          <img src="img1.jpg" alt="Projekt 5" />
+          <p>BBC Food</p>
+        </div>
+        <div class="card">
+          <img src="img3.jpg" alt="Projekt 6" />
+          <p>Den blå festival</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Grafisk Design content -->
+    <div id="webdesign" class="tab-content active">
+      <div class="card-grid">
+        <div class="card">
+          <img src="img1.jpg" alt="Projekt 1" />
+          <p>Individuel opgave</p>
+        </div>
+        <div class="card">
+          <img src="img1.jpg" alt="Projekt 2" />
+          <p>Rold Skov Orienteringsklub</p>
+        </div>
+        <div class="card">
+          <img src="img2.jpg" alt="Projekt 3" />
+          <p>Magisk Jul Skulpturpark Blokhus</p>
+        </div>
+        <div class="card">
+          <img src="img1.jpg" alt="Projekt 4" />
+          <p>Make better food</p>
+        </div>
+        <div class="card">
+          <img src="img1.jpg" alt="Projekt 5" />
+          <p>BBC Food</p>
+        </div>
+        <div class="card">
+          <img src="img3.jpg" alt="Projekt 6" />
+          <p>Den blå festival</p>
+        </div>
       </div>
     </div>
   </body>
