--- a/Index.html
+++ b/Index.html
@@ -89,7 +89,7 @@
           </div>
         </div>
       </section>
-      <section class="portfolioSektion">
+      <section class="portfolioSektion BackgroundColorGreen">
         <h2 class="Overskrift">Nyeste cases</h2>
         <div class="cardsSektion">
           <div class="flip-card">
